--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
-    "react-intersection-observer": "^9.3.5"
+    "react-intersection-observer": "^9.3.5",
+    "reactstrap": "^9.1.2"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
